# bistatic-radar-sea-reflectivity

./: .travis.yml  Figure10.m  Figure9.m  PlotShadowFactor.m  PlotSpecularRefl.m  PlotSpecularRefl.py  PlotWideAngleScatter.py  README.md  README.rst  ReflectivityCoeff_Calculation.m  RunBSR.m  TestCore.m  bistatic_ref.m  buildfile.m  compute_coeff.m  grazing_angles.m  rad2deg.m  seaslope.m  setup.cfg  setup.py  shadow_factor.m  specular_reflection.m  wave_facet_scatter.m  wide_angle_scatter.m
tests/: Test.m  TestUnit.m  test.py  test_mod.py
